infrastructure/controllers/traefik/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.home.youriulbri.ch
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: traefik
              port:
                number: 9000
